--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -169,4 +169,5 @@
         interruption,
         personal injury, loss of privacy, moral rights or the disclosure of confidential information.\n
     </string>
+    <string name="select_task">Select task</string>
 </resources>
