Adding a pomodoro activity. So far it doesn't do much

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -170,4 +170,5 @@
         personal injury, loss of privacy, moral rights or the disclosure of confidential information.\n
     </string>
     <string name="select_task">Select task</string>
+    <string name="working_on">Working on:</string>
 </resources>
