--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (c) 2011. Efstratios Xakoustos all rights reserved. -->
+<!--
+  ~ Copyright (c) 2013 Efstratios Xakoustos.
+  ~
+  ~ Licensed under the Apache License, Version 2.0 (the "License");
+  ~ you may not use this file except in compliance with the License.
+  ~ You may obtain a copy of the License at
+  ~
+  ~ http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
+  -->
 
 <resources>
     <string name="app_name">Ultra-Pomodoro</string>
@@ -76,98 +90,44 @@
     <string name="reset_overall_btn">Overall Statistics</string>
     <string name="updates"> </string>
     <string name="eula">
-        END-USER LICENSE AGREEMENT FOR THE ULTRA-POMODORO APPLICATION IMPORTANT PLEASE READ THE TERMS AND CONDITIONS OF
-        THIS LICENSE
-        AGREEMENT CAREFULLY BEFORE CONTINUING WITH THIS PROGRAM INSTALL: Efstratios Xakoustos End-User License Agreement
-        (\"EULA\") is a legal agreement between you (either an individual or a single entity) and Efstratios Xakoustos
-        for
-        the Efstratios Xakoustos software product(s) identified above which may include associated software components,
-        media, printed materials, and \"online\" or electronic documentation (\"SOFTWARE PRODUCT\"). By installing,
-        copying,
-        or otherwise using the SOFTWARE PRODUCT, you agree to be bound by the terms of this EULA. This license
-        agreement represents the entire agreement concerning the program between you and Efstratios Xakoustos, (referred
-        to
-        as \"licenser\"), and it supersedes any prior proposal, representation, or understanding between the parties.
-        If you do not agree to the terms of this EULA, do not install or use the SOFTWARE PRODUCT.\n
+        IMPORTANT! READ CAREFULLY: THIS IS A LEGAL AGREEMENT. BY DOWNLOADING, INSTALLING, COPYING, SAVING ON YOUR
+        COMPUTER, OR OTHERWISE USING THIS SOFTWARE, YOU ARE BECOMING A PARTY TO THIS AGREEMENT AND YOU ARE
+        CONSENTING TO BE BOUND BY ALL THE TERMS AND CONDITIONS OF THIS AGREEMENT.\n
         \n
-        The SOFTWARE PRODUCT is protected by copyright laws and international copyright treaties, as well as other
-        intellectual property laws and treaties. The SOFTWARE PRODUCT is licensed, not sold.\n
+        1. PARTIES\n
+        (a)	"Licensor" shall mean Efstratios Xakoustos.\n
+        (b)	"You" shall mean the individual or legal entity.\n
         \n
-        1. GRANT OF LICENSE.\n
-        The SOFTWARE PRODUCT is licensed as follows:\n
-        (a) Installation and Use.\n
-        Efstratios Xakoustos grants you the right to install and use copies of the SOFTWARE PRODUCT on your computer
-        running a validly licensed copy of the operating system for which the SOFTWARE PRODUCT was designed [e.g.,
-        Android,
-        iOS, Window Phone 7].\n
-        (b) Backup Copies.\n
-        You may also make copies of the SOFTWARE PRODUCT as may be necessary for backup and archival purposes.\n
+        2. DEFINITIONS\n
+        (a)	"Pomodoro" shall mean software program known as Pomodoro for Android by Efstratios Xakoustos in binary
+        and source form, including its documentation, and any Third Party Software.\n
+        (b) "Third Party Software" means all third-party java libraries in binary form, that are owned and licensed
+        by parties other than Licensor and that either integrated or made part of Pomodoro.\n
         \n
-        2. DESCRIPTION OF OTHER RIGHTS AND LIMITATIONS.\n
-        (a) Maintenance of Copyright Notices.\n
-        You must not remove or alter any copyright notices on any and all copies of the SOFTWARE PRODUCT.\n
-        (b) Distribution.\n
-        You may not distribute registered copies of the SOFTWARE PRODUCT to third parties. Evaluation versions available
-        for
-        download from Efstratios Xakoustos\'s websites may be freely distributed.\n
-        © Prohibition on Reverse Engineering, Decompilation, and Disassembly.\n
-        You may not reverse engineer, decompile, or disassemble the SOFTWARE PRODUCT, except and only to the extent that
-        such
-        activity is expressly permitted by applicable law notwithstanding this limitation.\n
-        (d) Rental.\n
-        You may not rent, lease, or lend the SOFTWARE PRODUCT.\n
-        (e) Support Services.\n
-        Efstratios Xakoustos may provide you with support services related to the SOFTWARE PRODUCT (\"Support
-        Services\").
-        Any supplemental software code provided to you as part of the Support Services shall be considered part of the
-        SOFTWARE
-        PRODUCT and subject to the terms and conditions of this EULA.
-        (f) Compliance with Applicable Laws.\n
-        You must comply with all applicable laws regarding use of the SOFTWARE PRODUCT.\n
+        3. GRANT OF LICENSE\n
+        (a)	All content of Pomodoro except Third Party Software is provided to You under the terms and conditions
+        of the Apache License, Version 2.0. You may obtain a copy of the Apache License at
+        http://www.apache.org/licenses/LICENSE-2.0. Unless required by applicable law or agreed in writing,
+        Pomodoro is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
+        implied. See the Apache License for the specific language governing permissions and limitations under the
+        Apache License.\n
+        (b)	 "Third Party Software" is licensed to You in accordance with a separate license agreement(s) included
+        with Pomodoro in the folder "license", and subject to any restrictions set forth herein. You agree to abide
+        by the terms and conditions of the Third Party Software license agreements. Licensor will have
+        no responsibility with respect to any Third Party Software, and You will look solely to the licensor(s)
+        of the Third Party Software for any remedy. Licensor claims no right in the Third Party Software, and the
+        same is owned exclusively by the licensor(s) of the Third Party Software. LICENSOR PROVIDES NO WARRANTY,
+        EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY, FITNESS FOR
+        A PARTICULAR PURPOSE, TITLE, AND NON-INFRINGEMENT, WITH RESPECT TO ANY THIRD PARTY SOFTWARE.\n
         \n
-        3. TERMINATION\n
-        Without prejudice to any other rights, Efstratios Xakoustos may terminate this EULA if you fail to comply with
-        the
-        terms and conditions of this EULA. In such event, you must destroy all copies of the SOFTWARE PRODUCT in your
-        possession.\n
-        \n
-        4. COPYRIGHT\n
-        All title, including but not limited to copyrights, in and to the SOFTWARE PRODUCT and any copies thereof are
-        owned by
-        Efstratios Xakoustos or his suppliers. All title and intellectual property rights in and to the content which
-        may
-        be accessed through use of the SOFTWARE PRODUCT is the property of the respective content owner and may be
-        protected
-        by applicable copyright or other intellectual property laws and treaties. This EULA grants you no rights to use
-        such
-        content. All rights not expressly granted are reserved by Efstratios Xakoustos.\n
-        \n
-        5. NO WARRANTIES\n
-        Efstratios Xakoustos expressly disclaims any warranty for the SOFTWARE PRODUCT. The SOFTWARE PRODUCT is provided
-        \'As Is\' without any express or implied warranty of any kind, including but not limited to any warranties of
-        merchantability, noninfringement, or fitness of a particular purpose. Efstratios Xakoustos does not warrant or
-        assume responsibility for the accuracy or completeness of any information, text, graphics, links or other items
-        contained within the SOFTWARE PRODUCT. Efstratios Xakoustos makes no warranties respecting any harm that may be
-        caused by the transmission of a computer virus, worm, time bomb, logic bomb, or other such computer program.
-        Null
-        Pointer Engineering further expressly disclaims any warranty or representation to Authorized Users or to any
-        third
-        party.\n
-        \n
-        6. LIMITATION OF LIABILITY\n
-        In no event shall Efstratios Xakoustos be liable for any damages (including, without limitation, lost profits,
-        business interruption, or lost information) rising out of \'Authorized Users\' use of or inability to use the
-        SOFTWARE
-        PRODUCT, even if Efstratios Xakoustos has been advised of the possibility of such damages. In no event will Null
-        Pointer Engineering be liable for loss of data or for indirect, special, incidental, consequential (including
-        lost
-        profit), or other damages based in contract, tort or otherwise. Efstratios Xakoustos shall have no liability
-        with
-        respect to the content of the SOFTWARE PRODUCT or any part thereof, including but not limited to errors or
-        omissions
-        contained therein, libel, infringements of rights of publicity, privacy, trademark rights, business
-        interruption,
-        personal injury, loss of privacy, moral rights or the disclosure of confidential information.\n
+        4. DISCLAIMER OF DAMAGES
+        (a)	REGARDLESS OF WHETHER ANY REMEDY SET FORTH HEREIN FAILS OF ITS ESSENTIAL PURPOSE, IN NO EVENT WILL
+        LICENSOR OR ITS SUPPLIERS OR RESELLERS BE LIABLE TO YOU UNDER ANY THEORY FOR ANY DAMAGES SUFFERED BY YOU OR ANY
+        USER OF POMODORO, OR FOR ANY SPECIAL, INCIDENTAL, INDIRECT, CONSEQUENTIAL, OR SIMILAR DAMAGES (INCLUDING
+        WITHOUT LIMITATION, DAMAGES FOR LOSS OF BUSINESS PROFITS, BUSINESS INTERRUPTION, LOSS OF BUSINESS INFORMATION,
+        OR ANY OTHER PECUNIARY LOSS) ARISING OUT OF THE USE OR INABILITY TO USE POMODORO, OR THE PROVISION OF OR
+        FAILURE TO PROVIDE SUPPORT SERVICES, EVEN IF LICENSOR HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGES,
+        AND REGARDLESS OF THE LEGAL OR EQUITABLE THEORY (CONTRACT, TORT OR OTHERWISE) UPON WHICH THE CLAIM IS BASED.\n
     </string>
     <string name="select_task">Select task</string>
     <string name="working_on">Working on:</string>
